# zerovm

./: .cproject  .gitignore  .project  01._make_output_folders.sh  02._compile_all_sources.sh  03._make_libraries_for_sandbox.sh  04._link_all_together_to_make_sandbox.sh  BUGS  ChangeLog  HACKING  INSTALL  Makefile  Makefile.am  Makefile.bkp  Makefile.in  README  README.md  TODO  aclocal.m4  bugs.txt  build_all.sh  configure  configure.ac  create_zerovm_config.sh  demo (part of README).txt  ftests.sh  history.txt  history_of_fails.txt  join.txt  mknexe.sh  ns_server.py  readme.txt  sandbox.sh  static.sh  tokenizer.c  tokenizer.h  ubasic.c  ubasic.h  zerovm_config.sql  zerovm_switches.txt
_my scripts/: 01. make output folders.readme.txt  01. make output folders.sh  02. compile all sources (c, cc, s).readme.txt  02. compile all sources (c, cc, s).sh  03. make libraries for sandbox.sh  04. link all together to make sandbox.readme.txt  04. link all together to make sandbox.sh
_my scripts/extras, dox, intermediate results/: collect_headers_from_c.bat  collect_headers_from_h.bat  collect_headers_from_sources.bat  compilation_example.bat  compilation_example.cmd  h.txt  h1.txt  h1_relative.txt  h1_sys.txt  h2.txt  h2_relative.txt  h2_sys.txt  h3.txt  h3_relative.txt  h3_sys.txt  h_relative.txt  h_sys.txt
api/: Makefile  compile_api.sh  syscall_manager.S  zrt.c  zrt.h  zvm.c  zvm.h  zvm_errors.h  zvm_manifest.c  zvm_manifest.h
base/: base_api.h  basictypes.h  process.h  rand_util_c.h  shared_memory.h  sync_socket.h
contrib/: submit-obs-build.sh  zerovm.spec.tmpl
contrib/jenkins/: Vagrantfile  jenkins.sh
debian/: changelog  changelog.old  control  copyright  exclude-files  rules  zerovm-zmq-dbg.install  zerovm-zmq-dev.install  zerovm-zmq.install
debian/source/: include-binaries
doc/: CHANGELOG  README  api.txt  boot.txt  broker.txt  channels.txt  command_line.txt  daemon.txt  demo (part of README).txt  determinism.txt  enviroment.txt  how to get validator.txt  how_to_recompile_zerovm.txt  manifest.txt  name_server.txt  new_validator.txt  nexe_debug.txt  pagination.txt  premature_manual.txt  report.txt  return_codes.txt  security.txt  snapshot.txt  syscallback.txt  syscalls.txt  trap.txt  troubleshouting.txt  user_map.txt  zerovm_api.txt  zerovm_switches.txt  zrtlib.txt  ztrace.txt  zvm_security.txt  zvm_structure.txt
gtest/data/: sqluse_test_config.sql  test_db_creator.sh
include/: atomic_ops.h  concurrency_ops.h  elf.h  elf32.h  elf64.h  elf_auxv.h  elf_constants.h  nacl_asm.h  nacl_assert.h  nacl_platform.h  nacl_scoped_ptr.h  portability.h  portability_io.h  portability_string.h
include/base/: basictypes.h  port.h  process.h  rand_util_c.h  shared_memory.h  sync_socket.h
include/nacl/: atomic_ops.h
include/win/: mman.h
lib/gtest/: README
samples/: README
samples/accessors/: Makefile  accessors.c  accessors.manifest
samples/api_test/: Makefile  api_test.c  api_test.template
samples/cdr/: Makefile  cdr.c  cdr.manifest  cdr.template
samples/command_line/: Makefile  command_line.c  command_line.manifest  command_line.template
samples/direct_syscalls/: Makefile  direct_syscall_test.c  direct_syscall_test.manifest
samples/disort/: Makefile  README  bitonic_sort.c  bitonic_sort.h  comm.c  comm.h  cpuid.c  cpuid.h  defines.h  disort.sh  distr_common.h  dsort.c  dsort.h  gendata.sh  genmanifest.sh  sort.c  sort.h
samples/environment/: Makefile  environment.c  environment.manifest  environment.template
samples/eof/: Makefile  data  debug  eof.c  eof.manifest  eof.nexe  eof.template  stdout.data
samples/file_io/: Makefile  file_io.c  file_io.manifest  file_io.template
samples/file_stat/: Makefile  file_stat.c  file_stat.manifest  file_stat.template
samples/get_random/: Makefile  random.c  random.manifest  random.template
samples/hello/: Makefile  hello.c  hello.manifest  hello.template  hello_world.c  hello_world.manifest
samples/lua-scripting/: Makefile  lua.manifest  script.lua
samples/malloc/: Makefile  malloc.c  malloc.manifest  malloc.template
samples/manifest/: Makefile  full.manifest  manifest.c  manifest.manifest  manifest.template
samples/mmap/: debug.info.txt  generate_manifest.txt  mmap_test.c  mmap_test2.c  mmap_test2_manifest.txt  mmap_test3.c  mmap_test3_manifest.txt  readme!.txt
samples/net/: Makefile  Makefile_couple  net.c  net.manifest  net.template  net1.manifest  net1.template  net2.manifest  net2.template  net3.template
samples/netcopy/: Makefile  netcopy.c  netcopy1.template  netcopy2.template  netcopy3.template  ns_server.py
samples/onering/: Makefile  onering.c  onering.c_x86_64.manifest  onering.manifest
samples/pagination/: Makefile  paging_test.c  paging_test.manifest
samples/reqrep/: Makefile  main_test1.c  main_test2.c  test.sh  test1.manifest  test2.manifest  test_0.sh  test_conseq.sh
samples/signal/: Makefile  signal.c  signal.manifest  signal.template
samples/sort/: Makefile  generate_manifest.txt  generator.manifest  generator.template  generator.uint32_t.c  generator_manifest.txt  readme!.txt  run_test.sh  sort.manifest  sort.template  sort_manifest.txt  sort_uint_proper_with_args.c  sort_uint_proper_with_args.template  test.manifest  test.template  test_manifest.txt  tester.uint32_t.c  zerovm_manifest.h
samples/sort_mapping/: generator.uint32_t.c  generator_manifest.txt  run_test.sh  sort_manifest.txt  test_manifest.txt  tester.uint32_t.c
samples/sort_paging/: Makefile  generator.manifest  generator.uint32_t.c  run_test.sh  sort.manifest  sort_uint_proper_with_args.c  test.manifest  tester.uint32_t.c
samples/sqlite/: Makefile  main_query.c  sqlexec_ro.manifest  vfs_channel.c  vfs_channel.h
samples/strtol/: Makefile  strtol.c  strtol.manifest  strtol.template
samples/syscallback/: Makefile  mknexe.sh  readme.txt  syscall_manager.S  syscallback.manifest  syscallback.nexe  syscallback_test.c  zrt_mock.c  zrt_mock.manifest
samples/temp/: argv0.c  argv0.txt  argv0_nanosleep.c_x86_64.report  argv0_ssyscall.txt  argv0_user_log.c  endless.c  far_away_pointer.c  far_away_pointer2.c  (+4 more)
(+1823 files in other folders)
